@@ -1,3 +1,6 @@
+Development:
+  - use bulk insert for validator balances and validator epoch summaries
+
 0.4.2:
   - add index to t_deposits for validator public key
 
